--- a/Oto/Oto/Base.lproj/LaunchScreen.storyboard
+++ b/Oto/Oto/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -13,14 +14,50 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchImage.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="99n-Xg-Pnk">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOT PURSUIT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1E5-Xj-fTh">
+                                <rect key="frame" x="54" y="55" width="212" height="57"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="tO4-G0-Jhy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version 1.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="svd-Xl-AY4">
+                                <rect key="frame" x="114" y="521" width="93" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1E5-Xj-fTh" firstAttribute="centerX" secondItem="svd-Xl-AY4" secondAttribute="centerX" id="I6w-TX-LaH"/>
+                            <constraint firstItem="99n-Xg-Pnk" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="LxX-vx-Czt"/>
+                            <constraint firstAttribute="trailing" secondItem="99n-Xg-Pnk" secondAttribute="trailing" id="MYI-4I-Sve"/>
+                            <constraint firstItem="99n-Xg-Pnk" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="SWZ-cr-4BT"/>
+                            <constraint firstItem="1E5-Xj-fTh" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="35" id="XbC-3v-RJP"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="svd-Xl-AY4" secondAttribute="bottom" constant="26" id="j0A-8k-dLT"/>
+                            <constraint firstItem="svd-Xl-AY4" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="98" id="nFO-At-cSC"/>
+                            <constraint firstItem="99n-Xg-Pnk" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="vdf-qx-CPa"/>
+                            <constraint firstItem="1E5-Xj-fTh" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="38" id="wih-w3-6HV"/>
+                            <constraint firstItem="99n-Xg-Pnk" firstAttribute="centerX" secondItem="1E5-Xj-fTh" secondAttribute="centerX" id="yWj-9l-kwh"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launchImage.jpeg" width="850" height="755"/>
+    </resources>
 </document>
